<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_margin="16dp"
        app:cardCornerRadius="28dp"
        app:cardElevation="6dp"

        app:cardBackgroundColor="@color/background">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="8dp">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:contentDescription="@string/home"
                app:fabSize="mini"
                app:srcCompat="@drawable/ic_home"
                app:backgroundTint="@color/primary"
                app:tint="@color/onPrimary"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:contentDescription="@string/profile"
                app:fabSize="mini"
                app:srcCompat="@drawable/ic_profile"
                app:backgroundTint="@color/primary"
                app:tint="@color/onPrimary"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_cart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:contentDescription="@string/cart"
                app:fabSize="mini"
                app:srcCompat="@drawable/ic_shopping_cart"
                app:backgroundTint="@color/primary"
                app:tint="@color/onPrimary"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_commands"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:contentDescription="@string/commands"
                app:fabSize="mini"
                app:srcCompat="@drawable/ic_commandes"
                app:backgroundTint="@color/primary"
                app:tint="@color/onPrimary"/>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_logout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:contentDescription="@string/logout"
                app:fabSize="mini"
                app:srcCompat="@drawable/ic_logout"
                app:backgroundTint="@color/onPrimary"
                app:tint="@color/background"/>

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>

